--- a/asset/pages/addApartment.html
+++ b/asset/pages/addApartment.html
@@ -104,177 +104,175 @@
     <!-- =-===================== END HEADER ==================== -->
     <!-- ====================================================== -->
 
-    <form action="">
-      <div class="add-aprtment">
-        <div class="row edit-aprt-row w-100">
-          <div class="col-lg-5 edit-ai-col col-md-6">
-            <div class="aprt-form">
+    <!-- <form action="">
+       -->
+    <div class="add-aprtment">
+      <div class="row edit-aprt-row w-100">
+        <div class="col-lg-5 edit-ai-col col-md-6">
+          <div class="aprt-form">
 
-              <div class="aprt-form-inp">
-                <label for="name">Development Name</label>
-                <input type="text" placeholder="Development Name" value="Serene Life Residences">
-              </div>
-              <div class="aprt-form-inp">
-                <label for="name">Development Address</label>
-                <input type="text" placeholder="Development Address" value="North city garden road - ST302, Australia">
-              </div>
-              <div class="aprt-form-btns d-flex justify-content-between align-items-center">
-                <div class="aprt-form-save d-flex">
-                  <a class="aprt-form-cencel" href="#">Cancel</a>
-                  <button type="submit" onclick="showAlert()" class="custom-btn dark">Save</button>
-                </div>
-                <div class="alert save-alert alert-success" role="alert">
-                  Apartment Edited Successfully!
-                </div>
-                <div class="aprt-form-create">
-                  <button class="table-edit" class="custom-btn dark" data-mdb-ripple-init data-mdb-modal-init
-                    data-mdb-target="#clientUpdate">Add Apartment</button>
-                </div>
-              </div>
-
+            <div class="aprt-form-inp">
+              <label for="name">Development Name</label>
+              <input type="text" placeholder="Development Name" value="Serene Life Residences">
             </div>
+            <div class="aprt-form-inp">
+              <label for="name">Development Address</label>
+              <input type="text" placeholder="Development Address" value="North city garden road - ST302, Australia">
+            </div>
+            <div class="aprt-form-btns d-flex justify-content-between align-items-center">
+              <div class="aprt-form-save d-flex">
+                <a class="aprt-form-cencel" href="#">Cancel</a>
+                <button type="submit" onclick="showAlert()" class="custom-btn dark">Save</button>
+              </div>
+              <div class="alert save-alert alert-success" role="alert">
+                Apartment Edited Successfully!
+              </div>
+              <div class="aprt-form-create">
+                <button class="table-edit" class="custom-btn dark" data-mdb-ripple-init data-mdb-modal-init
+                  data-mdb-target="#clientUpdate">Add Apartment</button>
+              </div>
+            </div>
+
           </div>
-          <div class="af-pos col-lg-2 col-md-6 edit-aimg-col">
-            <div class="af-file-inp">
-              <img class="w-100" src="../images/file Img.png" alt="" />
-            </div>
-            <div class="fi-label d-flex justify-content-center align-items-center">
-              <input type="file" id="file-input" style="display: none;">
-              <label for="file-input">
-                <span class="file-span"><img class="w-100" src="../images/file-inp.png" alt=""></span>
-              </label>
-            </div>
-          </div>
-
-    </form>
-  </div>
-  </div>
-  <div class="aprt-table">
-    <div class="table-container table-responsive">
-      <table class="table-striped table">
-        <thead>
-          <tr>
-            <th class="col-3 col-lg-4 th">Apartment Number</th>
-            <th class="col col-lg-4 th center-th">Development Name</th>
-            <th class="col-4 col-md-3 col-lg-4 th last-th">Action</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="col-3 col-lg-3">B - 70</td>
-            <td class="col center-td col-lg-4">Serene Life Residences</td>
-            <td class="col-4 col-md-3 last-td col-lg-5">
-              <div class="table-btns d-flex justify-content-center align-items-center">
-                <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
-                <a class="table-del" href="#" onclick="openModal()">Delete</a>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="col-3 col-lg-3">B - 70</td>
-            <td class="col center-td col-lg-4">Serene Life Residences</td>
-            <td class="col-4 col-md-3 last-td col-lg-5">
-              <div class="table-btns d-flex justify-content-center align-items-center">
-                <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
-                <a class="table-del" href="#" onclick="openModal()">Delete</a>
-              </div>
-            </td>
-          </tr>
-          <tr>
-            <td class="col-3 col-lg-3">B - 70</td>
-            <td class="col center-td col-lg-4">Serene Life Residences</td>
-            <td class="col-4 col-md-3 last-td col-lg-5">
-              <div class="table-btns d-flex justify-content-center align-items-center">
-                <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
-                <a class="table-del" href="#" onclick="openModal()">Delete</a>
-              </div>
-            </td>
-          </tr>
-
-        </tbody>
-      </table>
-    </div>
-  </div>
-  <!-- ========================= Modal ====================== -->
-  <div class="modal fade" id="clientUpdate" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog clients-modal  add-apart-modal">
-      <div class="modal-content clients-content add-aprt-content">
-
-        <div class="modal-header">
-          <h5 class="modal-title align-self-center client-modal-title" id="exampleModalLabel">
-            Add New Apartments
-          </h5>
-          <button type="button" class="btn-close af-close-btn" data-mdb-ripple-init data-mdb-dismiss="modal"
-            aria-label="Close"></button>
         </div>
-        <div class="modal-body">
-
-          <div class="client-modal-inp d-flex flex-column">
-            <div class="afd-badge-inp d-flex flex-column">
-              <label for="">Enter Apartment Number </label>
-              <div class="badge-input-container">
-                <input class="inputs" type="text" id="badge-input" placeholder="Enter text" />
-              </div>
-            </div>
-
-
-
-            <button type="submit" onclick="saveInput()" class="custom-btn dark">Save</button>
+        <div class="af-pos col-lg-2 col-md-6 edit-aimg-col">
+          <div class="af-file-inp">
+            <img class="w-100" src="../images/file Img.png" alt="" />
           </div>
-
-
+          <div class="fi-label d-flex justify-content-center align-items-center">
+            <input type="file" id="file-input" style="display: none;" onchange="displayImage()">
+            <label for="file-input">
+              <span class="file-span"><img id="preview-image" class="w-100" src="../images/file-inp.png" alt=""></span>
+            </label>
+          </div>
         </div>
+
+        <!-- </form> -->
       </div>
     </div>
-  </div>
-  <!-- ================================================== -->
-  <div id="myModal" class="modal-sec">
-    <!-- Modal content -->
-    <div class="modal-content d-flex justify-content-center align-items-center flex-column">
-      <div class="w-100 modal-head">
-        <p>Delete Apartment?</p>
+    <div class="aprt-table">
+      <div class="table-container table-responsive">
+        <table class="table-striped table">
+          <thead>
+            <tr>
+              <th class="col-3 col-lg-4 th">Apartment Number</th>
+              <th class="col col-lg-4 th center-th">Development Name</th>
+              <th class="col-4 col-md-3 col-lg-4 th last-th">Action</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td class="col-3 col-lg-3">B - 70</td>
+              <td class="col center-td col-lg-4">Serene Life Residences</td>
+              <td class="col-4 col-md-3 last-td col-lg-5">
+                <div class="table-btns d-flex justify-content-center align-items-center">
+                  <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
+                  <a class="table-del" href="#" onclick="openModal()">Delete</a>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td class="col-3 col-lg-3">B - 70</td>
+              <td class="col center-td col-lg-4">Serene Life Residences</td>
+              <td class="col-4 col-md-3 last-td col-lg-5">
+                <div class="table-btns d-flex justify-content-center align-items-center">
+                  <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
+                  <a class="table-del" href="#" onclick="openModal()">Delete</a>
+                </div>
+              </td>
+            </tr>
+            <tr>
+              <td class="col-3 col-lg-3">B - 70</td>
+              <td class="col center-td col-lg-4">Serene Life Residences</td>
+              <td class="col-4 col-md-3 last-td col-lg-5">
+                <div class="table-btns d-flex justify-content-center align-items-center">
+                  <a href="addAprtFurn.html" class="custom-btn dark">Edit</a>
+                  <a class="table-del" href="#" onclick="openModal()">Delete</a>
+                </div>
+              </td>
+            </tr>
+
+          </tbody>
+        </table>
       </div>
-      <div class="modal-cont d-flex justify-content-center align-items-center flex-column">
-        <p>Are you sure you want to delete
-          this apartment?</p>
-        <div class="modal-btns d-flex justify-content-center align-items-center">
-          <button class="mb-del" onclick="confirmDelete()">Yes</button>
-          <button class="mb-canc" onclick="closeModal()">No</button>
+    </div>
+    <!-- ========================= Modal ====================== -->
+    <div class="modal fade" id="clientUpdate" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog clients-modal  add-apart-modal">
+        <div class="modal-content clients-content add-aprt-content">
+
+          <div class="modal-header">
+            <h5 class="modal-title align-self-center client-modal-title" id="exampleModalLabel">
+              Add New Apartments
+            </h5>
+            <button type="button" class="btn-close af-close-btn" data-mdb-ripple-init data-mdb-dismiss="modal"
+              aria-label="Close"></button>
+          </div>
+          <div class="modal-body">
+
+            <div class="client-modal-inp d-flex flex-column">
+              <div class="afd-badge-inp d-flex flex-column">
+                <label for="">Enter Apartment Number </label>
+                <div class="badge-input-container">
+                  <input class="inputs" type="text" id="badge-input" placeholder="Enter text" />
+                </div>
+              </div>
+
+
+
+              <button type="submit" onclick="saveBadges()" class="custom-btn dark">Save</button>
+            </div>
+
+
+          </div>
         </div>
       </div>
     </div>
-  </div>
-  <!-- ==============   END MAIN CONTAINER   ============ -->
+    <!-- ================================================== -->
+    <div id="myModal" class="modal-sec">
+      <!-- Modal content -->
+      <div class="modal-content d-flex justify-content-center align-items-center flex-column">
+        <div class="w-100 modal-head">
+          <p>Delete Apartment?</p>
+        </div>
+        <div class="modal-cont d-flex justify-content-center align-items-center flex-column">
+          <p>Are you sure you want to delete
+            this apartment?</p>
+          <div class="modal-btns d-flex justify-content-center align-items-center">
+            <button class="mb-del" onclick="confirmDelete()">Yes</button>
+            <button class="mb-canc" onclick="closeModal()">No</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- ==============   END MAIN CONTAINER   ============ -->
 
-  <!-- MDB -->
-  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
-  <script src="../../script.js"></script>
-  <script>
+    <!-- MDB -->
+    <script type="text/javascript"
+      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+    <script src="../../script.js"></script>
+    <script>
+      function displayImage() {
+        const fileInput = document.getElementById('file-input');
+        const previewImage = document.getElementById('preview-image');
+        const file = fileInput.files[0];
 
-    function saveInput() {
-      // Get the value entered in the input field
-      var inputValue = document.getElementById("badge-input").value;
+        if (file) {
+          const reader = new FileReader();
 
-      // Find the parent element where you want to append the new input
-      var parentElement = document.querySelector(".aprt-form");
+          reader.onload = function (e) {
+            previewImage.src = e.target.result;
+          };
 
-      // Create a new div element to hold the input value
-      var newDivElement = document.createElement("div");
-      newDivElement.classList.add("aprt-form-inp");
-      newDivElement.innerHTML = `
-      <label for="name">Apartment Number</label>
-      <input type="text" placeholder="Apartment Number" value="${inputValue}">
-    `;
-
-      // Append the new div element to the parent element
-      parentElement.appendChild(newDivElement);
-
-      // Clear the input field after saving
-      document.getElementById("badge-input").value = "";
-    }
+          reader.readAsDataURL(file);
+        } else {
+          previewImage.src = '../images/file-inp.png';
+        }
+      }
+    </script>
 
 
-  </script>
+
 </body>
 
 </html>
