--- a/index.html
+++ b/index.html
@@ -1,231 +1,176 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lusso Admin Panel</title>
-    <!-- Font Awesome -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      rel="stylesheet"
-    />
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-      rel="stylesheet"
-    />
-    <!-- MDB -->
-    <link
-      href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="phone.css" />
-  </head>
 
-  <body>
-    <aside id="sidebar">
-      <div class="cross-btn" onclick="crossBtn()">
-        <i class="fas fa-xmark"></i>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Lusso Admin Panel</title>
+  <!-- Font Awesome -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+  <!-- MDB -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="phone.css" />
+</head>
 
-      <div class="container p-0">
-        <div class="site-logo">
-          <img src="asset/images/logo.png" alt="" />
-        </div>
-        <div class="aside-menu">
-          <ul class="menu-ul">
-            <li
-              class="menu-item active d-flex justify-content-start align-items-center"
-            >
-              <a
-                class="menu-link d-flex justify-content-center align-items-center"
-                href="index.html"
-              >
-                <div class="menu-icon">
-                  <img src="asset/images/deve-icon.svg" alt="" />
-                </div>
-                <p>Developments</p>
-              </a>
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <a
-                class="menu-link d-flex justify-content-center align-items-center"
-                href="appartment.html"
-              >
-                <div class="menu-icon">
-                  <img src="asset/images/deve-icon.svg" alt="" />
-                </div>
-
-                <p>Appartments</p></a
-              >
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <a
-                class="menu-link d-flex justify-content-center align-items-center"
-                href="Furnishing.html"
-              >
-                <div class="menu-icon">
-                  <img src="asset/images/furn-icon.svg" alt="" />
-                </div>
-                <p>Furnishings</p></a
-              >
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <a
-                class="menu-link d-flex justify-content-center align-items-center"
-                href="fabric.html"
-              >
-                <div class="menu-icon">
-                  <img src="asset/images/fbr-icon.svg" alt="" />
-                </div>
-                Fabrics</a
-              >
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <a
-                class="menu-link d-flex justify-content-center align-items-center"
-                href="clients.html"
-              >
-                <div class="menu-icon">
-                  <img src="asset/images/client-icon.svg" alt="" />
-                </div>
-                Clients</a
-              >
-            </li>
-            <li
-              class="menu-item d-flex justify-content-start align-items-center"
-            >
-              <a
-                class="menu-link d-flex justify-content-center align-items-center"
-                href="demoUser.html"
-              >
-                <div class="menu-icon">
-                  <img src="asset/images/client-icon.svg" alt="" />
-                </div>
-                Demo Users</a
-              >
-            </li>
-          </ul>
-        </div>
-      </div>
-    </aside>
-
-    <!-- ================================================== -->
-    <!-- =================    MAIN CONTAINER   ============ -->
-    <div class="main-container container-fluid">
-      <div class="contianer-fluid">
-        <div class="header d-flex justify-content-between align-items-center">
-          <div class="toggle-btn" onclick="toggleSideNav()">
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-            <div class="toggle-bar"></div>
-          </div>
-          <div class="site-name">
-            <h3>Admin Panel</h3>
-          </div>
-          <div
-            class="admin-info d-flex justify-content-centter align-items-center"
-          >
-            <p>Admin Name</p>
-            <div class="user-img">
-              <img src="asset/images/user-igm.png" alt="" />
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- =-============================ -->
-      <div
-        class="development-sec d-flex justify-content-between align-item-center"
-      >
-        <div class="deve-content">
-          <p>Developments</p>
-          <div class="dev-icon">
-            <img src="asset/images/dev-content.svg" alt="" />
-          </div>
-        </div>
-        <div
-          class="dev-total d-flex justify-content-center align-items-end flex-column"
-        >
-          <p>Total Developments:</p>
-          <h4>01</h4>
-        </div>
-      </div>
-      <!-- =============================== -->
-      <div class="dev-cards">
-        <div class="row">
-          <div class="col-xl-3 col-lg-4 develop-col col-md-2 col-12">
-            <div class="dev-card">
-              <div class="dev-card-img">
-                <img class="w-100" src="asset/images/dev-card.png" alt="" />
-              </div>
-              <div class="dev-card-content">
-                <h4>Serene Life Residences</h4>
-                <p>Address: North city garden road - ST302, Australia</p>
-                <div
-                  class="dev-card-end d-flex justify-content-between align-items-center"
-                >
-                  <p>Total Apartments:</p>
-                  <p>03</p>
-                </div>
-              </div>
-              <div
-                class="dev-card-buttons d-flex justify-content-end align-items-center"
-              >
-                <a class="btn-edit" href="asset/pages/addApartment.html"
-                  >Edit</a
-                >
-                <a class="btn-delete" href="#" onclick="openModal()">Delete</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="add-dev d-flex justify-content-center align-items-center">
-        <a href="asset/pages/addApartment.html">Add Development</a>
-      </div>
-
-      <!-- =================== DELETE MODAL =============== -->
-      <div id="myModal" class="modal-sec">
-        <!-- Modal content -->
-        <div
-          class="modal-content d-flex justify-content-center align-items-center flex-column"
-        >
-          <div class="w-100 modal-head">
-            <p>Delete Development?</p>
-          </div>
-          <div
-            class="modal-cont d-flex justify-content-center align-items-center flex-column"
-          >
-            <p>Are you sure you want to delete this development?</p>
-            <div
-              class="modal-btns d-flex justify-content-center align-items-center"
-            >
-              <button class="mb-del" onclick="confirmDelete()">Yes</button>
-              <button class="mb-canc" onclick="closeModal()">No</button>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- =================== END DELETE MODAL =============== -->
-      <!-- ================================== -->
+<body>
+  <aside id="sidebar">
+    <div class="cross-btn" onclick="crossBtn()">
+      <i class="fas fa-xmark"></i>
     </div>
-    <!-- ================================================== -->
-    <!-- ==============   END MAIN CONTAINER   ============ -->
 
-    <!-- MDB -->
-    <script
-      type="text/javascript"
-      src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"
-    ></script>
-    <script src="script.js"></script>
-  </body>
+    <div class="container p-0">
+      <div class="site-logo">
+        <img src="asset/images/logo.png" alt="" />
+      </div>
+      <div class="aside-menu">
+        <ul class="menu-ul">
+          <li class="menu-item active d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="index.html">
+              <div class="menu-icon">
+                <img src="asset/images/deve-icon.svg" alt="" />
+              </div>
+              <p>Developments</p>
+            </a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="appartment.html">
+              <div class="menu-icon">
+                <img src="asset/images/deve-icon.svg" alt="" />
+              </div>
+
+              <p>Appartments</p>
+            </a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="Furnishing.html">
+              <div class="menu-icon">
+                <img src="asset/images/furn-icon.svg" alt="" />
+              </div>
+              <p>Furnishings</p>
+            </a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="fabric.html">
+              <div class="menu-icon">
+                <img src="asset/images/fbr-icon.svg" alt="" />
+              </div>
+              Fabrics
+            </a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="clients.html">
+              <div class="menu-icon">
+                <img src="asset/images/client-icon.svg" alt="" />
+              </div>
+              Clients
+            </a>
+          </li>
+          <li class="menu-item d-flex justify-content-start align-items-center">
+            <a class="menu-link d-flex justify-content-center align-items-center" href="demoUser.html">
+              <div class="menu-icon">
+                <img src="asset/images/client-icon.svg" alt="" />
+              </div>
+              Demo Users
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </aside>
+
+  <!-- ================================================== -->
+  <!-- =================    MAIN CONTAINER   ============ -->
+  <div class="main-container container-fluid">
+    <div class="contianer-fluid">
+      <div class="header d-flex justify-content-between align-items-center">
+        <div class="toggle-btn" onclick="toggleSideNav()">
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+          <div class="toggle-bar"></div>
+        </div>
+        <div class="site-name">
+          <h3>Admin Panel</h3>
+        </div>
+        <div class="admin-info d-flex justify-content-centter align-items-center">
+          <p>Admin Name</p>
+          <div class="user-img">
+            <img src="asset/images/user-igm.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- =-============================ -->
+    <div class="alert save-alert d-none alert-success">
+      New furnishing package added successfully!
+    </div>
+    <div class="development-sec d-flex justify-content-between align-item-center">
+      <div class="deve-content">
+        <p>Developments</p>
+        <div class="dev-icon">
+          <img src="asset/images/dev-content.svg" alt="" />
+        </div>
+      </div>
+      <div class="dev-total d-flex justify-content-center align-items-end flex-column">
+        <p>Total Developments:</p>
+        <h4>01</h4>
+      </div>
+    </div>
+    <!-- =============================== -->
+    <div class="dev-cards">
+      <div class="row">
+        <div class="col-xl-3 col-lg-4 develop-col col-md-2 col-12">
+          <div class="dev-card">
+            <div class="dev-card-img">
+              <img class="w-100" src="asset/images/dev-card.png" alt="" />
+            </div>
+            <div class="dev-card-content">
+              <h4>Serene Life Residences</h4>
+              <p>Address: North city garden road - ST302, Australia</p>
+              <div class="dev-card-end d-flex justify-content-between align-items-center">
+                <p>Total Apartments:</p>
+                <p>03</p>
+              </div>
+            </div>
+            <div class="dev-card-buttons d-flex justify-content-end align-items-center">
+              <a class="btn-edit" href="asset/pages/addApartment.html">Edit</a>
+              <a class="btn-delete" href="#" onclick="openModal()">Delete</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="add-dev d-flex justify-content-center align-items-center">
+      <a href="asset/pages/addNewApprt.html">Add Development</a>
+    </div>
+
+    <!-- =================== DELETE MODAL =============== -->
+    <div id="myModal" class="modal-sec">
+      <!-- Modal content -->
+      <div class="modal-content d-flex justify-content-center align-items-center flex-column">
+        <div class="w-100 modal-head">
+          <p>Delete Development?</p>
+        </div>
+        <div class="modal-cont d-flex justify-content-center align-items-center flex-column">
+          <p>Are you sure you want to delete this development?</p>
+          <div class="modal-btns d-flex justify-content-center align-items-center">
+            <button class="mb-del" onclick="confirmDelete()">Yes</button>
+            <button class="mb-canc" onclick="closeModal()">No</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- =================== END DELETE MODAL =============== -->
+    <!-- ================================== -->
+  </div>
+  <!-- ================================================== -->
+  <!-- ==============   END MAIN CONTAINER   ============ -->
+
+  <!-- MDB -->
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.2.0/mdb.umd.min.js"></script>
+  <script src="script.js"></script>
+</body>
+
 </html>
