--- a/main-aprt-moto.html
+++ b/main-aprt-moto.html
@@ -132,7 +132,7 @@
           </div>
         </div>
         <div class="apf-add-spaces d-flex flex-column">
-          <h4 class="text-center">Add Apartment Spaces</h4>
+          <h4 class="text-center">Apartment Automation</h4>
           <div class="apf-space-head d-flex justify-content-between align-items-center">
             <div class="apf-space-name d-flex">
               <img src="../images/moto-icon.svg" alt="" />
