--- a/asset/pages/add-fabric-deal.html
+++ b/asset/pages/add-fabric-deal.html
@@ -22,7 +22,9 @@
     </div>
     <div class="container p-0">
       <div class="site-logo">
-        <img src="../images/logo.png" alt="" />
+        <a href="../../index.html">
+          <img src="../images/logo.png" alt="" />
+        </a>
       </div>
       <div class="aside-menu">
         <ul class="menu-ul">
@@ -146,7 +148,7 @@
 Premium Foam coated 'Avila ' blockout and 'Optimascreen Plus' sunscreen blinds for all windows. Complete privacy and light control.
 
 
- Note: Penthouses to have 'Baltic' Blockout roller blinds in bedrooms.</textarea>
+Note: Penthouses to have 'Baltic' Blockout roller blinds in bedrooms.</textarea>
       </div>
     </div>
 
