--- a/asset/pages/addMotarization.html
+++ b/asset/pages/addMotarization.html
@@ -22,7 +22,9 @@
     </div>
     <div class="container p-0">
       <div class="site-logo">
-        <img src="../images/logo.png" alt="" />
+        <a href="../../index.html">
+          <img src="../images/logo.png" alt="" />
+        </a>
       </div>
       <div class="aside-menu">
         <ul class="menu-ul">
