--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
 
     <div class="container p-0">
       <div class="site-logo">
-        <img src="asset/images/logo.png" alt="" />
+        <a href="index.html">
+          <img src="asset/images/logo.png" alt="" />
+        </a>
       </div>
       <div class="aside-menu">
         <ul class="menu-ul">
